--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vue-select": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
